--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
-		
+		<dependency> 
+    <groupId>org.springframework.boot</groupId> 
+    <artifactId>spring-boot-starter-validation</artifactId> 
+</dependency>
 <!--grafica-->
 		<dependency>
 			<groupId>org.webjars</groupId>
